# szovegertesimutato-

./: CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md
src/: lib.rs
