[package]
name = "szovegertesimutato-score"
version = "0.1.0"
edition = "2021"
description = "Calculate szovegertesimutato score for a given text and language."
repository = "https://github.com/astuanax/szovegertesimutato"
license = "MIT"
keywords = ["textanalysis", "readability", "szovegertesimutato", "languages"]


[lib]
name = "szovegertesimutato_score"
path = "src/lib.rs"



[dependencies]
regex = "1.10.6"
